# drones-ros2

./: .gitignore  .repos  README.md  apptainer.def  eolab.def  install.sh  system-overview.drawio
.github/workflows/: apptainer-build-deploy.yml
eolab_bringup/: CMakeLists.txt  package.xml
eolab_bringup/eolab_bringup/: commons.py
eolab_bringup/launch/: agent.launch.py  common_single.launch.py  drone_spawn.launch.py  multi.launch.py  single.launch.py  start.launch.py  start_world.launch.py  world.launch.py
eolab_bringup/rviz/: default.rviz
eolab_bringup/src/: wait_gz_entity.cpp
eolab_bringup_hw/: CMakeLists.txt  package.xml
eolab_bringup_hw/launch/: start.launch.py
eolab_bringup_sim/: CMakeLists.txt  package.xml
eolab_bringup_sim/launch/: bringup.launch.py  drone_spawn.launch.py  start.launch.py  world.launch.py
eolab_bringup_sim/src/: wait_gz.cpp  wait_gz_gui_ready.cpp  wait_gz_ready.cpp
eolab_demos/eolab_precision_landing/: CMakeLists.txt  package.xml
eolab_demos/eolab_precision_landing/src/: detector.cpp
eolab_description/: CMakeLists.txt  README.md  package.xml  server.config
eolab_description/assets/aruco0/: aruco0.config  aruco0.dae  aruco0.sdf
eolab_description/assets/gfl_outdoor/: gfl_outdoor.config  gfl_outdoor.sdf
eolab_description/drones/: phoenix.urdf.xacro  protoflyer.urdf.xacro
eolab_description/drones/meshes/: phoenix.mtl  protoflyer.mtl
eolab_description/gz-configs/: debug-gui.config  minimal-gui.config  server.config
eolab_description/launch/: gz_display.launch.py
eolab_description/macros/: core_sensors.xacro
eolab_description/payloads/: core_sensors.xacro  rgb_generic.xacro  sensor_generic.xacro
eolab_description/props/: t_motor_mf2009.xacro
eolab_description/propulsions/: dji_e305.xacro  t_motor_mf2009.xacro
eolab_description/worlds/: aruco.sdf  empty.sdf
eolab_description/xacros/: phoenix.urdf.xacro
eolab_examples_py/: package.xml  setup.cfg  setup.py
eolab_examples_py/eolab_examples_py/: takeoff_and_land.py
eolab_utils/: CMakeLists.txt  README.md  package.xml
eolab_utils/config/open_vins/mono_cam/: estimator_config.yaml  kalibr_imu_chain.yaml  kalibr_imucam_chain.yaml
eolab_utils/launch/: start_openvin.launch.py
eolab_utils/src/: demo.cpp  odom_viz.cpp  pose.cpp  px4_odom_tf.cpp  px4_to_imu_msg.cpp
